--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,29 @@ body{
 }
 .card{
     width: 90%;
-    max-width: 470px;
-    background: linear-gradient(135deg, #00feba, #5b548a);
+    max-width: 900px;
+    background: linear-gradient(185deg, #00feba, #5b548a);
     color: #fff;
-    margin: 100px auto 0;
+    margin: 50px auto 0;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
 }
+.data{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    grid-auto-rows: minmax(250px, auto);
+    place-items: center;
+}
 .search{
     width: 100%;
+    max-width: 1220px;
+    height: 60px;
+    border: 0;
+    outline: 0;
+    background-color:#ebfffc;
+    border-radius: 30px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -40,12 +53,13 @@ body{
     outline: 0;
     background: #ebfffc;
     border-radius: 50%;
-    width: 60px;
-    height: 60px;
+    width: 30px;
+    height: 30px;
     cursor: pointer;
+    margin-right: 20px;
 }
 .search button img{
-    width: 16px;
+    width: 10px;
     max-width: 100px;
 }
 .weather-icon{
@@ -62,10 +76,11 @@ body{
     margin-top: -10px;
 }
 .details{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 20px;
+    grid-auto-rows: minmax(50px, auto);
+    padding-right: 60px;
     margin-top: 50px;
 }
 .col{
@@ -78,7 +93,7 @@ body{
     margin-right: 10px;
 }
 .humidity, .wind{
-    font-size: 28px;
+    font-size: 14px;
     margin-top: -6px;
 }
 .weather{
@@ -90,4 +105,13 @@ body{
     font-size: 14px;
     margin-top: 10px;
     display: none;
+}
+@media screen and (max-width: 700px){
+    .data{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-gap: 20px;
+        grid-auto-rows: minmax(350px, auto);
+        place-items: center;
+    }
 }
